[tool.poetry]
name = "music"
version = "1.0.1"
description = "Spotify smart playlist generator. Last.fm integration for listening statistics"
authors = ["andy <andy@sarsoo.xyz>"]
readme = "README.md"
homepage = "https://music.sarsoo.xyz/"
repository = "https://github.com/Sarsoo/Music-Tools"

[tool.poetry.scripts]
test = 'admin:test'
start = 'admin:run'

[tool.poetry.dependencies]
python = "^3.8"
fireo = "^1.3.3"
Flask = "^1.1.2"
google-cloud-firestore = "^1.7.0"
google-cloud-logging = "^1.15.0"
google-cloud-pubsub = "^1.6.0"
google-cloud-tasks = "^1.5.0"
requests = "^2.24.0"

spotframework = { git = "https://github.com/Sarsoo/spotframework.git" }
fmframework = { git = "https://github.com/Sarsoo/pyfmframework.git" }
spotfm = { git = "https://github.com/Sarsoo/spotfm.git" }

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
Sphinx = "^3.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
