[tool.poetry]
name = "music"
version = "1.0.2"
description = "Spotify smart playlist generator. Last.fm integration for listening statistics"
authors = ["andy <andy@sarsoo.xyz>"]
readme = "README.md"
homepage = "https://mixonomer.sarsoo.xyz/"
repository = "https://github.com/Sarsoo/Mixonomer"

[tool.poetry.scripts]
test = 'admin:test'
start = 'admin:run'
docs = 'admin:docs'

[tool.poetry.dependencies]
python = "~3.11"
fireo = "^2.1.0"
Flask = "^2.1.3"
google-cloud-firestore = "<=2.10.0"
google-cloud-logging = "^3.2.1"
google-cloud-pubsub = "^2.13.4"
google-cloud-secret-manager = "^2.12.6"
google-cloud-tasks = "^2.10.0"
requests = "^2.28.1"
httpx = {extras = ["http2"], version = "^0.24.1"}
PyJWT = "^2.4.0"
functions-framework = "^3"

spotframework = { git = "https://github.com/Sarsoo/spotframework.git", branch = "master" }
fmframework = { git = "https://github.com/Sarsoo/pyfmframework.git", branch = "master" }
spotfm = { git = "https://github.com/Sarsoo/spotfm.git", branch = "master" }

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
python-dotenv = "^0.17.1"
Sphinx = "^5.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
